EXPATH = @EXPATH@

CXXFLAGS = @CXXFLAGS@ @CXXWARNING_FLAGS@

lib_LTLIBRARIES = libsablot.la

libsablot_la_SOURCES = \
        arena.h \
        base.h \
        context.h \
        datastr.h \
	debugger.h \
	decimal.h \
        domprovider.h \
        encoding.h \
        error.h \
        expr.h \
        guard.h \
        hash.h \
	jsdom.h \
	jsext.h \
	key.h \
	numbering.h \
        output.h \
        parser.h \
        platform.h \
        proc.h \
	sabcfg.h \
	sabdbg.h \
        sablot.h \
        sdom.h \
        shandler.h \
        situa.h \
        sxpath.h \
        tree.h \
        uri.h \
        utf8.h \
        vars.h \
        verts.h \
        \
        arena.cpp \
        base.cpp \
        context.cpp \
        datastr.cpp \
	debugger.cpp \
	decimal.cpp \
        domprovider.cpp \
        encoding.cpp \
        error.cpp\
        expr.cpp \
        hash.cpp \
	jsdom.cpp \
	jsext.cpp \
	key.cpp \
	numbering.cpp \
        output.cpp \
        parser.cpp \
        platform.cpp \
        proc.cpp \
        sablot.cpp \
        sdom.cpp \
        situa.cpp \
        sxpath.cpp \
        tree.cpp \
        uri.cpp \
        utf8.cpp \
        vars.cpp\
        verts.cpp

include_HEADERS = \
	sablot.h \
	shandler.h \
	sdom.h \
	sxpath.h \
	sabdbg.h \
	sabcfg.h

libsablot_la_LDFLAGS = -version-info 100:3:100

